--- a/index.html
+++ b/index.html
@@ -3,18 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Google Maps from External GeoJson with Clustered Marker Filters</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <head>
+  <title>Географія студентів Українського католицького університету</title>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title>Географія студентів українського католицького університету</title>
     <!--link to bootstrap to reset the css. you could remove this or use your own resets.*/ -->
@@ -29,7 +19,7 @@
 </head>
 
 <body>
-    <div class="header"><a href="https://ucu.edu.ua"><img id="logo" src="https://raw.githubusercontent.com/Aeternia-ua/UCU-students-map/master/img/ucu-logo.png" alt="Ukrainian catholic university logo"></a>
+    <div class="header"><a href="https://ucu.edu.ua"><img id="logo" src="img/ucu-logo.png" alt="Ukrainian catholic university logo"></a>
         <h1>Географія студентів Українського католицького університету</h1>
     </div>
     <div class="investCast">
@@ -103,10 +93,6 @@
     </div>
     </div>
     <div class="footer1">Ірина Герасимук || <a href="http://ceit.ucu.edu.ua">ЦеНІТ</a> 2018 ©</div>
-</body>
-  
-  
-
     <script  src="js/index.js"></script>
 
 
