--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div id="map">
         <!-- Replace the value of the key parameter with your own API key. -->
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvp03ypjZ5GGIZnUwwJFsQn6qoe74r8FA&callback=initMap">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvp03ypjZ5GGIZnUwwJFsQn6qoe74r8FA&v=3.exp&callback=initMap">
         </script>
         <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
         <script src="https://raw.githubusercontent.com/Aeternia-ua/UCU-students-map/master/js/oms.min.js"></script>
